# loft

./: .env.dev  .env.release  .gitignore  .gitmodules  Cargo.toml  Dioxus.toml  Dockerfile  Dockerfile.minsize  Makefile  README.md  build.sh  init.sh  package.json
.cargo/: config.toml
assets/: tailwind.css
config/: config.json
include/: config.h
src/: config.rs  lib.rs  main.c  main.rs  redis_connect.c  request_handler.c  vzw_connect.c  vzw_connect.h
src/components/: footer.rs  navbar.rs
src/db/: redis_connect.c  redis_connect.h  redis_connector.c  redis_connector.h
src/firmware/: firmware_download.c  firmware_download.h  firmware_requests.c
src/request/: firmware_handler.c  firmware_handler.h  request_common.c  request_common.h  router.c  router.h  vzw_handler.c  vzw_handler.h
src/views/: index.rs  mod.rs
src/vzw/: vzw_connect.c  vzw_connect.h
