[package]
name = "loft"
version = "0.1.0"
authors = ["justin <code@jes.contact>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory"]

[dependencies]
thingspace-sdk = { git = "https://github.com/justins-engineering/thingspace-sdk-rust.git", default-features = false, features = [
  "worker",
] }
web-sys = { version = "0.3", features = [
  "EventTarget",
  "Headers",
  "HtmlDocument",
  "Location",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "RequestCredentials",
] }
dioxus = { version = "0.7", features = ["router"] }
dioxus-free-icons = { version = "0.10", features = [
  "font-awesome-brands",
  "lucide"
] }
dioxus-i18n = { version = "0.5" }
serde_json = "1"
js-sys = { version = "0.3" }
strum = "0.28"
ory-kratos-client-wasm = { version = "0.2" }
unic-langid = { version = "0.9" }
chrono = { version = "0.4", default-features = false, features = [
  "now",
  "wasmbind",
] }
wasm-theme = { version = "0.1" }
const_format = "0.2"

# Dependencies for `api`
serde = { version = "1", features = ["derive"] }
serde_urlencoded = { version = "0.7" }

# "wasm" feature deps
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
serde-wasm-bindgen = "0.6"

futures = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
gloo-net = { version = "0.6", features = ["websocket"] }
bytes = { version = "1" }
thiserror = "2.0"
anyhow = "1.0"

[build-dependencies]
dotenvy = "0.15"

[features]
default = ["web"]
web = ["dioxus/web"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
